# hadalized.nvim

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  shipwright_build.lua
builder/: .gitignore  README.md  pyproject.toml
builder/src/hadalized/: __init__.py  builder.py  color.py  config.py  context.py  defaults.toml  model.py  schemes.toml  utils.py
builder/src/hadalized/templates/wezterm/: config.toml  default.toml
builder/src/hadalized/themes/: default.toml
builder/src/hadalized/themes/default/: default.toml
colors/: README.md  hadalized-dark.lua  hadalized-day.lua  hadalized-gray.lua  hadalized-light.lua  hadalized-white.lua  hadalized.lua  hadalized.vim  hadalized_dark.vim  hadalized_light.vim
lua/hadalized/: colors.lua  colors.py  config.lua  init.lua  okcolor.lua  palettes.lua  reference.lua  theme.lua  types.lua
lua/lush_theme/: archive.lua  hadalized.lua  reference.lua  saturation.lua
src/hadalized/: __init__.py  base.py  cache.py  color.py  config.py  convert.py.bak  gen.py  models.py  names.py  names.toml  palette.py  render.py  web.py  writer.py
src/hadalized/templates/: colors.html  config.toml  item.html  lua_module.lua  model_dump.json  neovim.lua  neovim_palette.lua  palette.html  palette_info.json  palette_test.toml  starship-all.toml  starship.toml  wezterm.toml
tests/: conftest.py  pyproject.toml  template.txt  test_base.py  test_cache.py  test_color.py  test_config.py  test_extract.py  test_gen.py  test_palette.py  test_template.py  test_theme_writer.py  test_writer.py
wezterm/: hadalized-day.toml  hadalized-gray.toml  hadalized-white.toml  hadalized.toml
