[project]
name = "hadalized"
version = "0.1.0"
description = "Hadalized theme builder"
readme = "README.md"
authors = [
    { name = "Shawn O'Hare", email = "shawn@shawnohare.com" }
]
requires-python = ">=3.14"
dependencies = [
    "coloraide>=6.2",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "luadata>=1.0.5",
    "pydantic>=2.12.5",
    "xdg-base-dirs>=6.0.2",
]

[project.scripts]
hadalized = "hadalized:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.pytest.ini_options]
addopts = "--cov src -vvv -ra -q"
testpaths = [
    "tests",
]

[tool.ruff.lint]
# select = ["ALL"]
select = [
    "A",        # detect shadowed builtins
    "BLE",      # disallow catch-all exceptions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "DTZ",      # require strict timezone manipulation with datetime
    "E",        # PyCodeStyle errors
    "F",        # Pyflakes rules
    "FA",       # Enforce from __future__ import annotations
    "FBT",      # detect boolean traps
    "I",        # Sort imports properly
    "ICN",      # Use common import conventions
    "ISC",      # Good use of string concatenation
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
    "NPY",      # Some numpy-specific things"COM", # enforce trailing comma rules
    "PTH",      # Use pathlib instead of os.path
    "RET",      # Good return practices
    "S",        # disallow things like "exec"; also restricts "assert"
    "SIM",      # Common simplification rules
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    # "TD",       # Be diligent with TODO comments
    "TID",      # Some good import practices
    "UP",       # Warn if certain things can changed due to newer Python versions
    "W",        # PyCodeStyle warnings
]
